# mastercert_api

./: .gitignore  README.md  data.csv  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  run.py  system_prompt.txt
alembic/: env.py
alembic/versions/: 7e60ead16e96_init.py
app/: __init__.py  data.csv  generate_embeddings.py  import_csv.py  main.py  system_prompt.txt
app/api/: routes.py
app/core/: config.py  dependencies.py  dependensies.py  middlewares.py  settings.py
app/database/: __init__.py  db.py  models.py  repository.py
app/routers/: routes.py
app/services/: __init__.py  chat_memory.py  email_service.py  gpt_service.py  language_detection.py  redis_client.py
app/utils/: generate_embeddings.py  import_csv.py
